--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Ramanuja Simha
 description: Postdoctoral Research Fellow, Toronto CA; PhD in Computer Science, USA
-baseurl: "/my-website" # the subpath of your site, e.g. /blog
+#baseurl: "/my-website" # the subpath of your site, e.g. /blog
 url: "http://ramanujasimha.com" # the base hostname & protocol for your site
 github_repo: my-website # the GitHub repo name for your project
 github_username: ramanujasimha
